--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,9 @@ p {
     max-width: 150px;
 }
 */
-.search-engine-optimization,.online-reputation-management, .social-media-marketing {
+
+/*Consolidated class setting */
+.search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -144,22 +146,11 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img, 
-.online-reputation-management,.social-media-marketing {
+.search-engine-optimization img  {
     max-height: 200px;
 }
 
 .search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
